# SignifiKANTE

./: .coverage  .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflow/: python-tests.yml
.github/workflows/: python-tests.yml
arboreto/: algo.py  core.py  fdr.py
signifikante/: algo.py  core.py  fdr.py  fdr_utils.py
test_output/: all_genes_clustering.pkl  target_Gene17.feather  target_Gene18.feather  target_Gene27.feather  target_Gene3.feather  target_Gene9.feather  target_medoids.pkl  tf_clustering.pkl  tf_medoids.pkl
tests/: test_algo.py  test_core.py  test_fdr.py  test_numba.py
